gateway/kong-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-admin
  namespace: default
spec:
  selector:
    app: kong
  ports:
  - name: admin
    port: 8001
    targetPort: 8001
  - name: admin-ssl
    port: 8444
    targetPort: 8444
  - name: gui
    port: 8002
    targetPort: 8002
