gateway/HTTPRoute.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: service-routes
  namespace: default
  annotations:
    konghq.com/strip-path: 'true'
    konghq.com/plugins: jwt-auth

spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: kong
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/articles"
      backendRefs:
        - name: article-service-service
          kind: Service
          port: 80
          weight: 1
    # - matches:
    #     - path:
    #         type: PathPrefix
    #         value: "/users"
    #   backendRefs:
    #     - name: user-service-service
    #       port: 80
    #       weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: "/fastapi"
      backendRefs:
        - name: fastapi-service
          port: 80
          weight: 1
