gateway/userservice-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: user-service-route
  namespace: default
  annotations:
    konghq.com/strip-path: 'true'
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: kong
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/users"
      backendRefs:
        - name: user-service-service
          port: 80
          weight: 1
